--- a/src/Components/Main/main.css
+++ b/src/Components/Main/main.css
@@ -8,7 +8,7 @@
   display:flex;
   flex-direction:column;
   justify-content:center;
-  
+  /* border: 2px solid red; */
   
 }
 
@@ -18,6 +18,7 @@
   /* max-width:800px; */
   position: relative;
   overflow: hidden;
+  /* border: 2px solid red; */
  
 }
 
@@ -37,8 +38,10 @@ video {
 }
 
 body {
-  background: #333;
+  background: #4b4949;
   color: white;
+  /* border: 2px solid red; */
+
 }
 
 .video-container:after {
@@ -62,6 +65,8 @@ h1 {
   font-family: Raleway;
   font-size: 5vw;
   font-weight:700;
+  /* border: 2px solid red; */
+
 
   @media (max-width: 400px) {
     font-size: 22px;
@@ -89,6 +94,8 @@ h1 {
   z-index: 10;
   width: 70%;
   margin:auto;
+  /* border: 2px solid red; */
+
 }
 
 .button {
@@ -98,6 +105,8 @@ h1 {
   padding:4px;
   border:1px solid rgba(184,70,71,1);
   margin-top:20px;
+  /* border: 2px solid red; */
+
 }
 
 .inner{
